# gradAdmission

./: Cargo.toml  README.md  Rocket.toml  test.json
data/2018_fall/: Export.csv  applicants.sqlite3
html/: applicants.html  detail.html  login.html  review.html
html/resources/: demo.css  demo.js  local.js  simple.css
migrations/create_basic/: down.sql  up.sql
migrations/init/: down.sql  up.sql
resources/: application.json  local.js  simple.css
src/: hash.rs  main.rs  pdf.rs
src/db/: mod.rs  models.rs  schema.rs
templates/: applicants.html.hbs  login.html.hbs  review.html.hbs  user.html.hbs
tls/: server.cert  server.key
