[package]
name = "admission"
version = "0.1.0"

[dependencies]
rocket = "0.3" 
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "~1.2", features = ["sqlite", "32-column-tables"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.10"
csv = "1"
handlebars = "0.28"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json", "handlebars_templates"]
